# ai-release-intelligence

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/web/: README.md  package-lock.json  package.json
docker/: Dockerfile
docs/: HANDOFF.md
docs/architecture/: 01-system-context.md  02-container-architecture.md  03-domain-model.md  04-data-model.md  05-event-processing.md  06-security-model.md  07-observability.md  08-ai-architecture.md  09-testing-strategy.md
docs/delivery/: 01-roadmap.md  02-milestones.md  03-backlog.md  04-definition-of-done.md  05-milestone-status.md
docs/deploy/: README.md
docs/portfolio/: case-study.md  cv-bullets.md  demo-script.md
docs/product/: 01-product-brief.md  02-scope-and-prioritization.md  03-user-journeys.md  04-user-stories.md  05-functional-requirements.md  06-non-functional-requirements.md  07-product-metrics.md  08-risk-register.md  09-ai-behavior-and-guardrails.md  10-prd.md  11-api-consumer-contract.md  12-launch-and-rollout-plan.md  13-post-launch-review-template.md  14-phase-a-review.md
docs/runbooks/: README.md  ai-provider-outage.md  database-outage.md  failed-webhook-processing.md  incorrect-release-risk.md  worker-backlog.md
migrations/: env.py
migrations/versions/: 001_initial.py  002_ci_runs.py  003_failures_classifications.py  004_intelligence_loop.py
tests/: __init__.py  conftest.py
tests/contract/: test_github_webhook_schema.py
tests/e2e/: conftest.py  test_critical_path.py
tests/evals/: runner.py  test_classification_eval.py
tests/integration/: conftest.py  test_auth.py  test_classification.py  test_health.py  test_intelligence_loop.py  test_metrics.py  test_webhook.py
tests/unit/: test_classification_pipeline.py  test_normalization.py  test_risk_engine.py  (+3 more)
(+46 files in other folders)
