[project]
name = "ai-release-intelligence"
version = "0.1.0"
description = "CI failure triage and release-risk intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
release-intel-seed = "api.seed:main"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "shared",
    "shared.models",
    "shared.repositories",
    "shared.ai",
    "shared.ai.adapters",
    "shared.similarity",
    "shared.processing",
    "domain",
    "api",
    "worker",
    "worker.tasks",
]

[tool.setuptools.package-data]
shared = ["ai/prompts/*.txt"]

[tool.setuptools.package-dir]
shared = "packages/shared/shared"
domain = "packages/domain/domain"
api = "apps/api/api"
worker = "apps/worker/worker"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "packages/shared", "packages/domain", "apps/api", "apps/worker"]
markers = [
    "integration: tests requiring PostgreSQL and Redis",
    "e2e: end-to-end critical path tests",
    "eval: AI classification eval suite",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
